// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WorkflowSteps rendering tests steps - test 1`] = `
<div>
  <div
    class="grid h-full grid-cols-[minmax(0,1fr)_minmax(0,2fr)]"
    data-testid="workflow-steps"
  >
    <div
      class="flex flex-col gap-4 overflow-y-auto bg-slate-50 p-4"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
        data-slot="button"
        data-testid="add-step-main-btn"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus mr-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Schritt hinzufügen
      </button>
      <div
        class="space-y-2"
        data-testid="steps"
      >
        <div
          class="cursor-pointer rounded-lg border bg-white p-3 transition-colors hover:border-primary"
          data-testid="step"
        >
          <div
            class="flex items-start justify-between gap-2"
          >
            <div
              class="flex min-w-0 flex-1 items-center gap-2"
            >
              <span
                class="w-5 shrink-0 text-right font-mono text-xs text-muted-foreground"
              >
                1
                .
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent text-primary-foreground [a&]:hover:bg-primary/90 shrink-0 bg-blue-600 text-xs hover:bg-blue-600"
                data-slot="badge"
                data-testid="start-badge"
              >
                Start
              </span>
              <span
                class="truncate text-sm font-medium"
              >
                step-title-1
              </span>
            </div>
            <div
              class="flex items-center"
            >
              <div
                data-slot="dropdown-menu"
                data-testid="mock-react-dropdown-menu-root"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9 h-6 w-6"
                  data-slot="dropdown-menu-trigger"
                  data-testid="more-options-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-ellipsis-vertical h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="5"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="19"
                      r="1"
                    />
                  </svg>
                </button>
                <div
                  data-testid="mock-react-dropdown-menu-portal"
                />
              </div>
            </div>
          </div>
          <div
            class="mt-1.5 flex flex-wrap items-center gap-1.5 text-xs text-muted-foreground"
          >
            <span
              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-xs"
              data-slot="badge"
              data-testid="type-badge"
            >
              Eigenständig
            </span>
          </div>
          <div
            class="mt-2 flex flex-wrap gap-1"
          >
            <span
              class="inline-flex items-center gap-1 rounded-full bg-slate-100 px-2 py-0.5 text-xs text-slate-600"
            >
              Weiter
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-right h-3 w-3 shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="m12 5 7 7-7 7"
                />
              </svg>
              <span
                class="max-w-20 truncate"
              >
                step-title-2
              </span>
            </span>
            <span
              class="inline-flex items-center gap-1 rounded-full bg-slate-100 px-2 py-0.5 text-xs text-slate-600"
            >
              Abbrechen
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-right h-3 w-3 shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="m12 5 7 7-7 7"
                />
              </svg>
              <span
                class="max-w-20 truncate"
              >
                step-title-3
              </span>
            </span>
          </div>
        </div>
        <div
          class="cursor-pointer rounded-lg border bg-white p-3 transition-colors hover:border-primary"
          data-testid="step"
        >
          <div
            class="flex items-start justify-between gap-2"
          >
            <div
              class="flex min-w-0 flex-1 items-center gap-2"
            >
              <span
                class="w-5 shrink-0 text-right font-mono text-xs text-muted-foreground"
              >
                2
                .
              </span>
              <span
                class="truncate text-sm font-medium"
              >
                step-title-2
              </span>
            </div>
            <div
              class="flex items-center"
            >
              <div
                data-slot="dropdown-menu"
                data-testid="mock-react-dropdown-menu-root"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9 h-6 w-6"
                  data-slot="dropdown-menu-trigger"
                  data-testid="more-options-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-ellipsis-vertical h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="5"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="19"
                      r="1"
                    />
                  </svg>
                </button>
                <div
                  data-testid="mock-react-dropdown-menu-portal"
                />
              </div>
            </div>
          </div>
          <div
            class="mt-1.5 flex flex-wrap items-center gap-1.5 text-xs text-muted-foreground"
          >
            <span
              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-xs"
              data-slot="badge"
              data-testid="type-badge"
            >
              Eigenständig
            </span>
          </div>
          <div
            class="mt-2 flex flex-wrap gap-1"
          >
            <span
              class="inline-flex items-center gap-1 rounded-full bg-slate-100 px-2 py-0.5 text-xs text-slate-600"
            >
              Weiter
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-right h-3 w-3 shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="m12 5 7 7-7 7"
                />
              </svg>
              <span
                class="max-w-20 truncate"
              >
                step-title-3
              </span>
            </span>
            <span
              class="inline-flex items-center gap-1 rounded-full bg-slate-100 px-2 py-0.5 text-xs text-slate-600"
            >
              Abbrechen
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-right h-3 w-3 shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="m12 5 7 7-7 7"
                />
              </svg>
              <span
                class="max-w-20 truncate"
              >
                ?
              </span>
            </span>
          </div>
        </div>
        <div
          class="cursor-pointer rounded-lg border bg-white p-3 transition-colors hover:border-primary"
          data-testid="step"
        >
          <div
            class="flex items-start justify-between gap-2"
          >
            <div
              class="flex min-w-0 flex-1 items-center gap-2"
            >
              <span
                class="w-5 shrink-0 text-right font-mono text-xs text-muted-foreground"
              >
                3
                .
              </span>
              <span
                class="truncate text-sm font-medium"
              >
                step-title-3
              </span>
            </div>
            <div
              class="flex items-center"
            >
              <div
                data-slot="dropdown-menu"
                data-testid="mock-react-dropdown-menu-root"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9 h-6 w-6"
                  data-slot="dropdown-menu-trigger"
                  data-testid="more-options-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-ellipsis-vertical h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="5"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="19"
                      r="1"
                    />
                  </svg>
                </button>
                <div
                  data-testid="mock-react-dropdown-menu-portal"
                />
              </div>
            </div>
          </div>
          <div
            class="mt-1.5 flex flex-wrap items-center gap-1.5 text-xs text-muted-foreground"
          >
            <span
              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-xs"
              data-slot="badge"
              data-testid="type-badge"
            >
              Eigenständig
            </span>
          </div>
          <div
            class="mt-2 flex flex-wrap gap-1"
          >
            <span
              class="inline-flex items-center gap-1 rounded-full bg-slate-100 px-2 py-0.5 text-xs text-slate-600"
            >
              Weiter
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-right h-3 w-3 shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="m12 5 7 7-7 7"
                />
              </svg>
              <span
                class="max-w-20 truncate"
              >
                ?
              </span>
            </span>
            <span
              class="inline-flex items-center gap-1 rounded-full bg-slate-100 px-2 py-0.5 text-xs text-slate-600"
            >
              Abbrechen
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-right h-3 w-3 shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="m12 5 7 7-7 7"
                />
              </svg>
              <span
                class="max-w-20 truncate"
              >
                ?
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="overflow-y-auto bg-white"
    >
      <div
        class="flex h-full flex-col items-center justify-center gap-3 p-8 text-center"
        data-testid="step-not-selected"
      >
        <p
          class="text-sm text-muted-foreground"
        >
          Wähle links einen Schritt zum Bearbeiten
        </p>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
          data-slot="button"
          data-testid="add-step-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Neuen Schritt erstellen
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkflowSteps rendering tests steps empty - test 1`] = `
<div>
  <div
    class="grid h-full grid-cols-[minmax(0,1fr)_minmax(0,2fr)]"
    data-testid="workflow-steps"
  >
    <div
      class="flex flex-col gap-4 overflow-y-auto bg-slate-50 p-4"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
        data-slot="button"
        data-testid="add-step-main-btn"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus mr-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Schritt hinzufügen
      </button>
      <div
        class="space-y-2"
        data-testid="steps"
      />
    </div>
    <div
      class="overflow-y-auto bg-white"
    >
      <div
        class="flex h-full flex-col items-center justify-center gap-3 p-8 text-center"
        data-testid="step-not-selected"
      >
        <p
          class="text-sm text-muted-foreground"
        >
          Wähle links einen Schritt zum Bearbeiten
        </p>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
          data-slot="button"
          data-testid="add-step-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Neuen Schritt erstellen
        </button>
      </div>
    </div>
  </div>
</div>
`;
